@@ -1,16 +1,30 @@
 package ru.practicum.shareit.item.service;
 
 import lombok.RequiredArgsConstructor;
+import org.hibernate.Hibernate;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+import ru.practicum.shareit.booking.Booking;
+import ru.practicum.shareit.booking.mapper.BookingMapper;
+import ru.practicum.shareit.booking.repository.BookingRepository;
 import ru.practicum.shareit.exception.NotFoundException;
 import ru.practicum.shareit.exception.ValidationException;
+import ru.practicum.shareit.item.dto.CommentDto;
 import ru.practicum.shareit.item.dto.ItemDto;
+import ru.practicum.shareit.item.mapper.CommentMapper;
 import ru.practicum.shareit.item.mapper.ItemMapper;
+import ru.practicum.shareit.item.model.Comment;
 import ru.practicum.shareit.item.model.Item;
+import ru.practicum.shareit.item.repository.CommentRepository;
 import ru.practicum.shareit.item.repository.ItemRepository;
 import ru.practicum.shareit.user.User;
+import ru.practicum.shareit.user.mapper.UserMapper;
 import ru.practicum.shareit.user.service.UserService;
 
+import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -19,26 +33,14 @@ import java.util.stream.Collectors;
 public class ItemServiceImpl implements ItemService {
     private final ItemRepository itemRepository;
     private final UserService userService;
+    private final BookingRepository bookingRepository;
+    private final CommentRepository commentRepository;
 
     @Override
+    @Transactional
     public ItemDto createItem(ItemDto itemDto, Long ownerId) {
-
-        if (itemDto.getName() == null || itemDto.getName().isBlank()) {
-            throw new ValidationException("Item name cannot be empty");
-        }
-        if (itemDto.getDescription() == null || itemDto.getDescription().isBlank()) {
-            throw new ValidationException("Item description cannot be empty");
-        }
-        if (itemDto.getAvailable() == null) {
-            throw new ValidationException("Item available status cannot be null");
-        }
-
-
-        try {
-            userService.getUserById(ownerId);
-        } catch (NotFoundException e) {
-            throw new NotFoundException("User not found");
-        }
+        validateItemDto(itemDto);
+        getUser(ownerId);
 
         Item item = ItemMapper.toItem(itemDto);
         User owner = new User();
@@ -50,11 +52,10 @@ public class ItemServiceImpl implements ItemService {
     }
 
     @Override
+    @Transactional
     public ItemDto updateItem(Long itemId, ItemDto itemDto, Long ownerId) {
-        Item existingItem = itemRepository.findById(itemId);
-        if (existingItem == null) {
-            throw new NotFoundException("Item not found");
-        }
+        Item existingItem = itemRepository.findById(itemId)
+                .orElseThrow(() -> new NotFoundException("Item not found"));
 
         if (!existingItem.getOwner().getId().equals(ownerId)) {
             throw new NotFoundException("Only owner can update item");
@@ -76,38 +77,127 @@ public class ItemServiceImpl implements ItemService {
             existingItem.setAvailable(itemDto.getAvailable());
         }
 
-        Item updatedItem = itemRepository.update(itemId, existingItem);
+        Item updatedItem = itemRepository.save(existingItem);
         return ItemMapper.toItemDto(updatedItem);
     }
 
     @Override
-    public ItemDto getItemById(Long itemId) {
-        Item item = itemRepository.findById(itemId);
-        if (item == null) {
-            throw new NotFoundException("Item not found");
+    @Transactional(readOnly = true)
+    public ItemDto getItemById(Long itemId, Long userId) {
+        Item item = itemRepository.findById(itemId)
+                .orElseThrow(() -> new NotFoundException("Item not found"));
+
+        Hibernate.initialize(item.getOwner());
+
+        ItemDto itemDto = ItemMapper.toItemDto(item);
+
+        if (item.getOwner() != null && item.getOwner().getId().equals(userId)) {
+            LocalDateTime now = LocalDateTime.now();
+
+            List<Booking> lastBookings = bookingRepository.findLastBookings(itemId, now);
+            if (lastBookings != null && !lastBookings.isEmpty()) {
+                itemDto.setLastBooking(BookingMapper.toBookingShortDto(lastBookings.get(0)));
+            }
+
+            List<Booking> nextBookings = bookingRepository.findNextBookings(itemId, now);
+            if (nextBookings != null && !nextBookings.isEmpty()) {
+                itemDto.setNextBooking(BookingMapper.toBookingShortDto(nextBookings.get(0)));
+            }
         }
-        return ItemMapper.toItemDto(item);
+
+        List<Comment> comments = commentRepository.findByItemId(itemId);
+        if (comments != null) {
+            itemDto.setComments(comments.stream()
+                    .map(CommentMapper::toCommentDto)
+                    .collect(Collectors.toList()));
+        }
+
+        return itemDto;
     }
 
     @Override
-    public List<ItemDto> getAllItemsByOwner(Long ownerId) {
-        return itemRepository.findByOwnerId(ownerId).stream()
-                .map(ItemMapper::toItemDto)
-                .collect(Collectors.toList());
+    @Transactional(readOnly = true)
+    public List<ItemDto> getAllItemsByOwner(Long ownerId, int from, int size) {
+        Pageable pageable = PageRequest.of(from / size, size);
+        List<Item> items = itemRepository.findByOwnerIdOrderById(ownerId, pageable);
+        LocalDateTime now = LocalDateTime.now();
+
+        return items.stream().map(item -> {
+            ItemDto itemDto = ItemMapper.toItemDto(item);
+
+            List<Booking> lastBookings = bookingRepository.findLastBookings(item.getId(), now);
+            if (!lastBookings.isEmpty()) {
+                itemDto.setLastBooking(BookingMapper.toBookingShortDto(lastBookings.get(0)));
+            }
+
+            List<Booking> nextBookings = bookingRepository.findNextBookings(item.getId(), now);
+            if (!nextBookings.isEmpty()) {
+                itemDto.setNextBooking(BookingMapper.toBookingShortDto(nextBookings.get(0)));
+            }
+
+            List<Comment> comments = commentRepository.findByItemId(item.getId());
+            itemDto.setComments(comments.stream()
+                    .map(CommentMapper::toCommentDto)
+                    .collect(Collectors.toList()));
+
+            return itemDto;
+        }).collect(Collectors.toList());
     }
 
     @Override
-    public List<ItemDto> searchItems(String text) {
+    @Transactional(readOnly = true)
+    public List<ItemDto> searchItems(String text, int from, int size) {
         if (text == null || text.isBlank()) {
-            return List.of();
+            return Collections.emptyList();
         }
 
-        String searchText = text.toLowerCase();
-        return itemRepository.findAll().stream()
-                .filter(item -> item.getAvailable() != null && item.getAvailable())
-                .filter(item -> (item.getName() != null && item.getName().toLowerCase().contains(searchText)) ||
-                        (item.getDescription() != null && item.getDescription().toLowerCase().contains(searchText)))
+        Pageable pageable = PageRequest.of(from / size, size);
+        return itemRepository.searchAvailableItems(text, pageable).stream()
                 .map(ItemMapper::toItemDto)
                 .collect(Collectors.toList());
+    }
+
+    @Override
+    @Transactional
+    public CommentDto addComment(Long itemId, CommentDto commentDto, Long userId) {
+        Item item = itemRepository.findById(itemId)
+                .orElseThrow(() -> new NotFoundException("Item not found"));
+        User author = getUser(userId);
+
+        boolean hasApprovedBooking = bookingRepository.existsApprovedPastBooking(
+                itemId, userId, LocalDateTime.now());
+
+        if (!hasApprovedBooking) {
+            throw new ValidationException("User must have approved booking for this item to leave a comment");
+        }
+
+        if (commentDto.getText() == null || commentDto.getText().isBlank()) {
+            throw new ValidationException("Comment text cannot be empty");
+        }
+
+        Comment comment = new Comment();
+        comment.setText(commentDto.getText());
+        comment.setItem(item);
+        comment.setAuthor(author);
+        comment.setCreated(LocalDateTime.now());
+
+        Comment savedComment = commentRepository.save(comment);
+        return CommentMapper.toCommentDto(savedComment);
+    }
+
+    private User getUser(Long userId) {
+        return UserMapper.toUser(userService.getUserById(userId));
+    }
+
+    private void validateItemDto(ItemDto itemDto) {
+        if (itemDto.getName() == null || itemDto.getName().isBlank()) {
+            throw new ValidationException("Item name cannot be empty");
+        }
+        if (itemDto.getDescription() == null || itemDto.getDescription().isBlank()) {
+            throw new ValidationException("Item description cannot be empty");
+        }
+        if (itemDto.getAvailable() == null) {
+            throw new ValidationException("Item available status cannot be null");
+        }
     }
 }
